[package]
name = "https_outcall"
version = "0.1.0"
edition = "2021"

[dependencies]
# Web framework
actix-web = { version = "4", features = ["rustls"] }
actix-rt = "2.8"
actix-service = "2.0"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_cbor = "0.11"

# Database
rusqlite = { version = "0.29", features = ["bundled"] }
r2d2 = "0.8"
r2d2_sqlite = "0.22"

# Internet Computer
ic-agent = "0.30"
candid = "0.9"

# Async runtime
tokio = { version = "1", features = ["full"] }
futures = "0.3"

# Utilities
chrono = "0.4"
anyhow = "1.0"
thiserror = "1.0"
dashmap = "5.5.3"
log = "0.4"
env_logger = "0.10"
uuid = { version = "1.4", features = ["v4", "serde"] }

# Authentication
argon2 = { version = "0.5", features = ["std"] }