[package]
name = "https-outcall"
version = "0.1.0"
edition = "2021"

[dependencies]
# Web framework
actix-web = { version = "4.3.1", features = ["rustls"] }
actix = "0.13.0"
actix-web-actors = "4.2.0"
actix-files = "0.6.2"
actix-cors = "0.6.4"

# TLS/SSL
rustls = "0.20.8"
rustls-pemfile = "1.0.2"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_cbor = "0.11"

# Database
rusqlite = { version = "0.29", features = ["bundled"] }
r2d2 = "0.8"
r2d2_sqlite = "0.22"
# sqlx removed to avoid conflicts

# Internet Computer
ic-agent = { version = "0.30", features = ["pem"] }
candid = "0.9"
pem = "1.1"
ring = "0.16"

# Async runtime
tokio = { version = "1", features = ["full"] }
futures = "0.3"

# Logging
log = "0.4"
env_logger = "0.10.0"

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# Utilities
uuid = { version = "1.3.0", features = ["v4", "serde"] }
lazy_static = "1.4.0"
anyhow = "1.0"
thiserror = "1.0"
dashmap = "5.5.3"
dotenv = "0.15.0"

# Authentication
argon2 = { version = "0.5", features = ["std"] }

# HTTP client
reqwest = { version = "0.11", features = ["json"] }

# Background jobs - removed since we're using WebSockets now
# tokio-cron-scheduler = "0.9.4"